--- a/pagination/css/styles.css
+++ b/pagination/css/styles.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
 }
 
-.category-container {
+.container {
     width: 80%;
     margin: 50px auto;
     background-color: #fff;
@@ -19,21 +19,24 @@ h1 {
     color: #333;
 }
 
-.category-container div {
-    padding: 10px;
-    margin: 5px 0;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
 }
 
-.category-container div:hover {
-    background-color: #f1f1f1;
+th, td {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
 }
 
 .pagination-container {
     text-align: center;
-    margin-top: 20px;
 }
 
 .pagination-container button {
